--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Binaries for programs and plugins
+.gitignore
 *.exe
 *.dll
 *.so
@@ -12,3 +13,4 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+2_base/2.1/cgroup-test/
